@@ -1,9 +1,6 @@
 package algorithm;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class S17 {
     private final List<String> result = new ArrayList<>();
@@ -13,14 +10,14 @@ public class S17 {
         if (digits.length() == 0) {
             return result;
         }
-        map.put('2', List.of("a", "b", "c"));
-        map.put('3', List.of("d", "e", "f"));
-        map.put('4', List.of("g", "h", "i"));
-        map.put('5', List.of("j", "k", "l"));
-        map.put('6', List.of("m", "n", "o"));
-        map.put('7', List.of("p", "q", "r", "s"));
-        map.put('8', List.of("t", "u", "v"));
-        map.put('9', List.of("w", "x", "y", "z"));
+        map.put('2', Arrays.asList("a", "b", "c"));
+        map.put('3', Arrays.asList("d", "e", "f"));
+        map.put('4', Arrays.asList("g", "h", "i"));
+        map.put('5', Arrays.asList("j", "k", "l"));
+        map.put('6', Arrays.asList("m", "n", "o"));
+        map.put('7', Arrays.asList("p", "q", "r", "s"));
+        map.put('8', Arrays.asList("t", "u", "v"));
+        map.put('9', Arrays.asList("w", "x", "y", "z"));
         dfs(digits, 0, "");
         return result;
     }
